# ruga

./: Cargo.toml  DESIGN.md  GDD.md  IDEA.md  LEGAL.md  LICENSE  LICENSE.md  README.md  TODO.md  config.lua  config.toml  config.yml  physic_engine.md  profiling.sh  publish.sh  save.toml  script.lua
archive/: graphics.rs  main.rs
assets/objs/: hammer.fcstd  hammer.fcstd1  shotgun.fcstd  shotgun.fcstd1  sniper.fcstd  sniper.fcstd1  uzis.fcstd  uzis.fcstd1
config/: config.yml  graphics.yml
config/entities/: character.yml  config.yml
levels/: common.lua  kruskal.lua  one.lua  tata.lua  toto.lua
levels/2 - Ruga castle/: config.toml
levels/3 - Your castle/: config.toml
levels/main/: config.toml
levels/tutorial/: config.toml
map/: map.tmx
src/: .entities.rs.swp  .levels.rs.swp  .main.rs.swp  TODO.md  api.rs  app.rs  body.rs  camera.rs  character.rs  collision_manager.rs  colors.rs  components.rs  conf.rs  configuration.rs  control.rs  direction.rs  doors.rs  draw_systems.rs  effect_manager.rs  effects.rs  entities.rs  entity_macro.rs  event_loop.rs  frame_manager.rs  geometry.rs  graphic_manager.rs  graphics.rs  graphics.yml  input.rs  levels.rs  lib.rs  life.rs  main.rs  monster.rs  notifications.rs  persistent_snd.rs  physic.rs  physics.rs  portal.rs  quadtree.rs  (+13 more)
src/app/: app.rs  input.rs  mod.rs  point.rs
src/audio/: .travis.yml  Cargo.toml  LICENCE-APACHE  LICENCE-MIT  README.md  THOUGHTS.md
src/audio/examples/: usage.rs
src/audio/src/: lib.rs  music.rs
src/audio/src/effect/: mod.rs  persistent.rs  short.rs
src/audio/tests/: channel_conv.rs  init_close.rs  music_stop.rs  music_transition.rs  persistent_effect.rs  reset.rs  short_effect.rs
src/body/: character.rs  mod.rs  wall.rs
src/configuration/: Cargo.toml  config.toml  save.toml
src/engine/: Cargo.toml  body.rs  lib.rs  (+2 more)
tests/: lib.rs
(+106 files in other folders)
