[package]
name = "ruga"
version = "0.2.0"
authors = ["thiolliere <guillaume.thiolliere@opmbx.org>"]

[[bin]]
name = "ruga"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
graphics = { path = "src/graphics" }
specs = "0.7"
glium = "*"
time = "*"
lazy_static = "*"
toml = "0.4"
rand = "*"
png = "*"
fnv = "*"
gilrs = "*"
